--- a/IOSDouYuZB/IOSDouYuZB/Classes/Home(首页)/View/CollectionHeaderView.xib
+++ b/IOSDouYuZB/IOSDouYuZB/Classes/Home(首页)/View/CollectionHeaderView.xib
@@ -26,7 +26,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_header_phone" translatesAutoresizingMaskIntoConstraints="NO" id="b8a-om-om5">
                     <rect key="frame" x="10" y="20" width="18" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="18" id="Uey-Q2-RCh"/>
+                        <constraint firstAttribute="height" constant="18" id="cED-Cv-sIK"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="颜值" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kJc-S0-rau">
@@ -59,6 +59,7 @@
             <viewLayoutGuide key="safeArea" id="VXr-Tz-HHm"/>
             <connections>
                 <outlet property="iconImageView" destination="b8a-om-om5" id="Iah-b3-QZc"/>
+                <outlet property="moreBtn" destination="mUa-V1-uoC" id="uzp-jz-dFD"/>
                 <outlet property="titleLabel" destination="kJc-S0-rau" id="JMa-VF-VXx"/>
             </connections>
             <point key="canvasLocation" x="23" y="49"/>
